[metadata]
# replace with your username:
name = pykiss-orbitntnu
version = 0.0.1
author = Joakim Skogø Langvand @jlangvand
author_email = jlangvand@gmail.com
description = Simple serial KISS library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jlangvand/pykiss
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.6

[options.packages.find]
where=src